Renamed School to Education Center

--- a/MEInsight.Web/Views/Participants/Index.cshtml
+++ b/MEInsight.Web/Views/Participants/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.RefParticipantTypeId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ParticipantCode)
+                @Html.DisplayNameFor(model => model.Code)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
@@ -85,7 +85,7 @@
                 @Html.DisplayFor(modelItem => item.RefParticipantTypeId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ParticipantCode)
+                @Html.DisplayFor(modelItem => item.Code)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
