--- a/MEInsight.Web/Views/Participants/Create.cshtml
+++ b/MEInsight.Web/Views/Participants/Create.cshtml
@@ -27,9 +27,9 @@
                 <span asp-validation-for="RefParticipantTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParticipantCode" class="control-label"></label>
-                <input asp-for="ParticipantCode" class="form-control" />
-                <span asp-validation-for="ParticipantCode" class="text-danger"></span>
+                <label asp-for="Code" class="control-label"></label>
+                <input asp-for="Code" class="form-control" />
+                <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
