--- a/MEInsight.Web/Views/Participants/Delete.cshtml
+++ b/MEInsight.Web/Views/Participants/Delete.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.RefParticipantTypeId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParticipantCode)
+            @Html.DisplayNameFor(model => model.Code)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParticipantCode)
+            @Html.DisplayFor(model => model.Code)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
